--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -26,9 +26,9 @@ provider:
     IMAGES_S3_BUCKET: serverless-todo-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
     AUTH_0_JWKS_URI: https://dev-12vhdpr8.us.auth0.com/.well-known/jwks.json 
-    AUTH_0_KID: VArlqYg1aNvcN-nWzp7mC
-    AUTH_0_CLIENT_ID: sbL5vUVoovGjPobmQkjzSxJC2TR3a1Qc
-    AUTH_0_CLIENT_SECRET: InRK6kNBoTb7JjcugH7GFEgSH7aqMvxEX0kyIkYeQP_ScReGdLzLPP82EGpPjJi8
+    AUTH_0_KID: 
+    AUTH_0_CLIENT_ID: 
+    AUTH_0_CLIENT_SECRET: 
     AUTH_0_AUDIENCE: https://dev-12vhdpr8.us.auth0.com/api/v2/
     AUTH_0_TOKEN_URL: https://dev-12vhdpr8.us.auth0.com/oauth/token
 
